panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_elif.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_elif.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (declaration puts~1 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (expression
            (call (name puts~1 `fn(∅: ptr<char const>) -> int`)
               (string "it works")))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "VALUE: %d\n")
               3)))))

----- stderr -----
