panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_empty_object_like_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_empty_object_like_macro.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_empty_object_like_macro.c"
   (function-definition
      f~0 `fn() -> void`
      (compound-statement
         (return ∅)))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (expression (call (name f~0 `fn() -> void`))))))

----- stderr -----
