panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_function_like_macro_with_itself_in_argument_list.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_function_like_macro_with_itself_in_argument_list.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_function_like_macro_with_itself_in_argument_list.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `long long` 42)
         (return
            (generic
               (name x~2 `long long`)
               (assoc `long long` (add 27 1)))))))

----- stderr -----
