panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_function_like_macro_with_nesten_parens_in_argument_list.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_function_like_macro_with_nesten_parens_in_argument_list.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_function_like_macro_with_nesten_parens_in_argument_list.c"
   (function-definition
      f~0 `fn(x: int, y: int) -> int`
      (params
         x~2 `int`
         y~3 `int`)
      (compound-statement
         (return (add (multiply 2 (name x~2 `int`)) (name y~3 `int`)))))
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (return
            (add
               (subtract
                  (call (name f~0 `fn(x: int, y: int) -> int`)
                     5
                     20)
                  (add 1
                     (comma
                        100
                        2)))
               42)))))

----- stderr -----
