panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_lexer_hack_applies_to_macro_expansion.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_lexer_hack_applies_to_macro_expansion.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_lexer_hack_applies_to_macro_expansion.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (declaration x~1 `int` 42)
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (compound-statement
            (typedef x `int`)
            (declaration y~4 `int` 27)
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (name y~4 `int`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (name x~1 `int`))))))

----- stderr -----
