panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_line_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_line_macro.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_line_macro.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration xs~3 `array<int; 6>`
            (braced
               7
               7
               8
               9
               10))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu %d %d %d %d %d %d\n")
               (lengthof (name xs~3 `array<int; 6>`))
               (subscript (name xs~3 `array<int; 6>`) 0)
               (subscript (name xs~3 `array<int; 6>`) 1)
               (subscript (name xs~3 `array<int; 6>`) 2)
               (subscript (name xs~3 `array<int; 6>`) 3)
               (subscript (name xs~3 `array<int; 6>`) 4)
               (subscript (name xs~3 `array<int; 6>`) 5)))
         (return 16))))

----- stderr -----
