panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_macro_expansion_is_not_recursive.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_macro_expansion_is_not_recursive.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_macro_expansion_is_not_recursive.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration a~3 `int` 10)
         (declaration b~4 `int` 20)
         (declaration c~5 `int` 30)
         (return (add (add (add (name a~3 `int`) 5) 3) 1)))))

----- stderr -----
