panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_object_like_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_object_like_macro.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_object_like_macro.c"
   (declaration putchar~0 `fn(c: int) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration x~3 `int` 42)
         (expression
            (call (name putchar~0 `fn(c: int) -> int`)
               'a'))
         (expression
            (call (name putchar~0 `fn(c: int) -> int`)
               '\n'))
         (return (name x~3 `int`)))))

----- stderr -----
